logs/wallace.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Wallace-0.9.1.egg-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psycopg2'...
Listing './lib/python3.5/site-packages/psycopg2/.libs'...
Listing './lib/python3.5/site-packages/psycopg2/tests'...
Listing './lib/python3.5/site-packages/psycopg2-2.7.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/ujson-1.35.egg-info'...
Listing './lib/python3.5/site-packages/wallace'...
Listing './lib/python3.5/site-packages/wallace/config'...
Listing './lib/python3.5/site-packages/wallace/db'...
Listing './lib/python3.5/site-packages/wallace/db/base'...
Listing './lib/python3.5/site-packages/wallace/db/base/attrs'...
Listing './lib/python3.5/site-packages/wallace/db/base/nosql'...
Listing './lib/python3.5/site-packages/wallace/db/base/sql'...
Listing './lib/python3.5/site-packages/wallace/db/mongo'...
Listing './lib/python3.5/site-packages/wallace/db/pg'...
Compiling './lib/python3.5/site-packages/wallace/db/pg/pool.py'...
***   File "./lib/python3.5/site-packages/wallace/db/pg/pool.py", line 20
    except psycopg2.IntegrityError, err:
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/wallace/db/redisdb'...
Listing './share'...
Listing './share/python-wheels'...
